# doction

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  design-guide.md  google7sSr_9o9FTIa4qjuJFaMUFYfqT0xzOuayTyhsS1bfiQ.html  index.html  privacy.html  split-pane-spec.md  terms.html
docs/superpowers/plans/: 2026-03-23-doction-mvp.md  2026-03-28-resizable-sidebar.md
docs/superpowers/specs/: 2026-03-23-doction-design.md  2026-03-28-resizable-sidebar-design.md
src/: App.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs
src/components/: Tooltip.tsx
src/components/auth/: AuthGuard.tsx  LoginScreen.tsx
src/components/content/: DocPageContent.tsx  DocRenderer.tsx  FavoritesPageContent.tsx  FileDownload.tsx  FilePageContent.tsx  FolderPageContent.tsx  FolderSkeleton.tsx  FolderView.tsx  HomePageContent.tsx  ImagePreview.tsx  PdfPreview.tsx  RecentPageContent.tsx  SheetPageContent.tsx  SheetRenderer.tsx  TrashPageContent.tsx
src/components/dialogs/: AboutModal.tsx  FolderPicker.tsx  ShortcutsModal.tsx
src/components/dnd/: SortableFileList.tsx
src/components/navigation/: BreadcrumbDropdown.tsx  Breadcrumbs.tsx  CommandPalette.tsx  TabBar.tsx
src/components/panels/: ActivityPanel.tsx  VersionHistoryPanel.tsx
src/components/panes/: PaneLeafView.tsx  PaneRenderer.tsx  ResizeDivider.tsx
src/components/sidebar/: AccountMenu.tsx  (+6 more)
src/lib/: actions.ts  api-context.tsx  doc-parser.ts
src/routes/: __root.tsx  doc.$docId.tsx  favorites.tsx  file.$fileId.tsx  folder.$folderId.tsx  index.tsx  recent.tsx  sheet.$sheetId.tsx  trash.tsx
src/styles/: globals.css
website/: index.html  terms.html
(+32 files in other folders)
