[package]
name = "doction"
version = "0.2.0"
description = "Doction — a Notion-like desktop app backed by Google Drive"
authors = ["Doction Contributors"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "doction_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
urlencoding = "2"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one at a time so the compiler can optimize better
